# app/controllers/api/v1/folders_controller.rb
@@ -12,7 +12,7 @@ module Api
       end
 
       def create
-        folder = folders.new(folder_params)
+        folder = folders.new(create_params)
 
         if folder.save
           render json: serialize(folder), status: :created
@@ -22,7 +22,13 @@ module Api
       end
 
       def update
-        if @folder.update(folder_params)
+        if tree_move?
+          if update_with_tree_move
+            render json: serialize(@folder)
+          else
+            render_errors(@folder)
+          end
+        elsif @folder.update(folder_params)
           render json: serialize(@folder)
         else
           render_errors(@folder)
@@ -40,8 +46,39 @@ module Api
           @folder = folders.kept.find(params[:id])
         end
 
+        def create_params
+          params.require(:folder).permit(:id, :name)
+        end
+
         def folder_params
-          params.require(:folder).permit(:id, :name, :position)
+          params.require(:folder).permit(:name)
+        end
+
+        def tree_params
+          params.require(:folder).permit(:before_id, :after_id)
+        end
+
+        def tree_move?
+          body = params.require(:folder)
+          body.key?(:before_id) || body.key?(:after_id)
+        end
+
+        def update_with_tree_move
+          success = false
+
+          Folder.transaction do
+            unless @folder.update(folder_params)
+              raise ActiveRecord::Rollback
+            end
+
+            unless @folder.move_in_tree(**tree_params.to_h.symbolize_keys)
+              raise ActiveRecord::Rollback
+            end
+
+            success = true
+          end
+
+          success
         end
 
         def serialize(folder)
